--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpaceX Clock</title>
-    <meta description="clock for all the time zones on Mars" tags="clock, mars, SpaceX" />
+    <title>Timezone Clocks</title>
+    <meta description="Different times show different visual" tags="clock, fallen stars, javascript" />
     <link rel="stylesheet" href="layout.css" />
     <link rel="stylesheet" href="change-day.css" />
     <link rel="stylesheet" href="fallen-stars.css" />
