--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <button class="button-zone dynamic" onclick="changeTimezone('America/Fortaleza')">
           <h1>Fortaleza</h1>
         </button>
-        <button class="button-zone dynamic" onclick="changeTimezone('America/Adak')">
-          <h1>Adak</h1>
+        <button class="button-zone dynamic" onclick="changeTimezone('America/Anchorage')">
+          <h1>Anchorage</h1>
         </button>
         <button class="button-zone dynamic" onclick="changeTimezone('Asia/Seoul')">
           <h1>Seoul</h1>
